--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 asgiref==3.2.7
+astroid==2.4.2
+betterpath==0.2.2
+click==7.1.2
 defusedxml==0.6.0
 diff-match-patch==20181111
 Django==3.0.7
@@ -7,14 +10,29 @@ django-import-export==2.2.0
 django-qrcode==0.3
 django-taggit==1.3.0
 django-tinymce==3.0.2
+django-user-agents==0.4.0
 et-xmlfile==1.0.1
+isort==4.3.21
 jdcal==1.4.1
+l==0.11.0
+lazy-object-proxy==1.4.3
 MarkupPy==1.14
+mccabe==0.6.1
 odfpy==1.4.1
 openpyxl==3.0.3
+pylint==2.5.3
+python-memcached==1.59
 pytz==2020.1
 PyYAML==5.3.1
+six==1.15.0
 sqlparse==0.3.1
 tablib==2.0.0
+toml==0.10.1
+typed-ast==1.4.1
+ua-parser==0.10.0
+user-agents==2.1
+vcversioner==2.16.0.0
+wrapt==1.12.1
 xlrd==1.2.0
 xlwt==1.3.0
+zope.interface==5.1.0
